# yukiyo

./: Procfile  Procfile.windows  app.json  main.py  procfile.windows  pyproject.toml  requirements.txt  serve.py  test.py  wsgi.py
funcs/: __init__.py  imgbb.txt  w.py
prefabs/: prefabs.json
scripts/: create_db.sh  deps.sh
static/: w.css
static/menu/assets/css/: styles.css
templates/: images.html  index.html  loading.html  page.html  search.html  viewer.html
