[tool.poetry]
name = "repl_python3_beta_yukiyo"
version = "0.1.0"
description = ""
authors = ["Ehnryu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
Flask = "^2.0.3"
options = "^1.4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
